--- a/style.css
+++ b/style.css
@@ -1,1 +1,12 @@
-
+body {
+  background-color: #444444;
+    color: #dddd;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 10% 10%;
+}
+.experience-header {
+  text-transform: uppercase;
+  border-top: 1px solid #dddddd;
+  background-color: rgba(0,0,0, 0.1)
+  
+}
