--- a/style.css
+++ b/style.css
@@ -10,3 +10,8 @@ body {
   background-color: rgba(0,0,0, 0.1)
   
 }
+.Education-header {
+    text-transform: uppercase;
+  border-top: 1px solid #dddddd;
+  background-color: rgba(0,0,0, 0.1)
+}
