--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #444444;
-    color: #dddd;
+  background-color: hotpink;
+    color: white;
   font-family: Arial, Helvetica, sans-serif;
   margin: 10% 10%;
 }
