--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: hotpink;
-    color: white;
+  background-color: pink;
+    color: black;
   font-family: Arial, Helvetica, sans-serif;
   margin: 10% 10%;
 }
